<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/main_bottom_switcher_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/sy"
                android:textColor="@color/main_bottom_tv_color" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/order" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/dd"
                android:textColor="@color/main_bottom_tv_color" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/me" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/gr"
                android:textColor="@color/main_bottom_tv_color" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/more" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/gd"
                android:textColor="@color/main_bottom_tv_color" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>