<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_division_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/djdzz" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_division_title">

        <TableRow>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/c_fff"
                android:gravity="center_horizontal"
                android:text="@string/mdl"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/c_fff"
                android:gravity="center_horizontal"
                android:text="@string/kdj"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/c_fff"
                android:gravity="center_horizontal"
                android:text="@string/z"
                android:textSize="@dimen/sp_16" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/c_fff"
                android:gravity="center_horizontal"
                android:text="@string/mdl"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/c_fff"
                android:gravity="center_horizontal"
                android:text="@string/kdj"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/c_fff"
                android:gravity="center_horizontal"
                android:text="@string/z"
                android:textSize="@dimen/sp_16" />
        </TableRow>
    </TableLayout>
</RelativeLayout>